--- a/package.json
+++ b/package.json
@@ -14,8 +14,16 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "next": "13.0.7",
+    "next-sanity": "^3.1.4",
+    "next-sanity-image": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
